# rvi_sota_client

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  generate_yocto_deps.sh
doc/: 3pc.md
docker-test/: Dockerfile  canonical_json.py
docker/pkg/: Dockerfile  sota-client.conf  sota-client.service
docs/: 3pc.md
run/: Dockerfile  DockerfileUptane  README.md  canonical_json.py  make_package.sh  pkg.sh  run.sh  sota.toml.env  sota.toml.template  sota_client.service  sota_client_autoprovision.service  sota_client_ostree.service  sota_client_ostree.sysv.sh  sota_client_ostree_auto.service  sota_client_uptane_auto.service  sota_client_yocto.sysv.sh  sota_ostree.sh  sota_prov.sh  sota_provision.sh  sota_start.sh
sota-client/: Cargo.toml
sota-client/docker/: Dockerfile  make_package.sh  sota-client.service  sota-client.service.tpl  sota_client_default.service  sota_provision.sh  sota_start.sh
sota-client/docs/: 3pc.dot
sota-client/run/: sota_sysinfo.sh
sota-client/src/: atomic.rs  authenticate.rs  broadcast.rs  images.rs  interpreter.rs  lib.rs  main.rs  sota.rs  uptane.rs
sota-client/src/datatype/: canonical.rs  command.rs  config.rs  download.rs  error.rs  event.rs  install.rs  mod.rs  network.rs  ostree.rs  signature.rs  tuf.rs  util.rs
sota-client/src/gateway/: console.rs  dbus.rs  http.rs  mod.rs  socket.rs  websocket.rs
sota-client/src/http/: auth_client.rs  http_client.rs  mod.rs  test_client.rs  tls.rs
sota-client/src/pacman/: deb.rs  mod.rs  ostree.rs  test.rs
sota-client/src/rvi/: edge.rs  json_rpc.rs  mod.rs  parameters.rs  services.rs
sota-client/tests/config/: default.toml
sota-client/tests/keys/: rsa.der  rsa.pub
sota-client/tests/uptane_basic/director/: manifest.json
sota-client/tests/uptane_multi_ecu/director/: root.json
sota-installer/: Cargo.toml
sota-installer/examples/: basic.toml  full.toml  secondary.toml
sota-installer/src/: config.rs  datatypes.rs  installer.rs  main.rs
sota-installer/src/examples/: secondary.toml
sota-launcher/: Cargo.toml
sota-launcher/examples/: config.toml  targets.toml
sota-launcher/src/: config.rs  datatypes.rs  http.rs  main.rs  manifests.rs  mtu.rs
src/: atomic.rs  authenticate.rs  broadcast.rs  images.rs  interpreter.rs  lib.rs  main.rs  registration.rs  sota.rs  uptane.rs
src/datatype/: auth.rs  canonical.rs  command.rs  config.rs  dbus.rs  error.rs  event.rs  install.rs  mod.rs  network.rs  ostree.rs  report.rs  request.rs  shell.rs  signature.rs  tuf.rs  uptane.rs  util.rs  verify.rs
src/gateway/: console.rs  dbus.rs  gateway.rs  http.rs  mod.rs  socket.rs  websocket.rs
src/http/: auth_client.rs  http_client.rs  mod.rs  test_client.rs  tls.rs
src/package_manager/: deb.rs  mod.rs  ostree.rs  package_manager.rs  rpm.rs  test.rs  thm.rs  uptane.rs
src/pacman/: deb.rs  interface.rs  mod.rs  ostree.rs  rpm.rs  test.rs  uptane.rs
src/rvi/: edge.rs  json_rpc.rs  mod.rs  parameters.rs  services.rs  transfers.rs
tests/: config_tests.rs  vectors.rs
tests/config/: auth.toml  certificate.toml  default.toml  provision.toml  template.toml
tests/toml/: certificate.toml  default.toml  genivi.toml  old.toml
tests/uptane/: root.json  snapshot.json  targets.json  targets_director.json  timestamp.json
tests/uptane/ats/: ats_director.json  manifest.json  targets_director.json  targets_supplier.json
tests/uptane/director/: manifest.json  snapshot.json
tests/uptane/ed25519/: root.json  timestamp.json
tests/uptane/repo_1/: root.json  snapshot.json  targets.json  timestamp.json
tests/uptane_basic/director/: root.json
tests/uptane_multi_ecu/director/: targets.json
tests/vectors/: vector-meta.json
tests/vectors/001/director/keys/: 1.root-1.priv  1.root-1.pub  1.snapshot-1.priv  1.snapshot-1.pub  1.targets-1.priv  1.targets-1.pub  1.timestamp-1.priv  1.timestamp-1.pub
tests/vectors/001/director/repo/: 1.root.json  snapshot.json  targets.json  timestamp.json
tests/vectors/001/repo/keys/: 1.root-1.priv  1.root-1.pub  1.snapshot-1.priv  1.snapshot-1.pub  1.targets-1.priv  1.targets-1.pub  1.timestamp-1.priv  1.timestamp-1.pub
tests/vectors/001/repo/repo/: 1.root.json  snapshot.json  targets.json  timestamp.json
