[package]
name = "sota_client"
version = "0.1.0"
authors = ["Shaun Taheri <shaun@advancedtelematic.com>"]

[lib]
name = "sota"
path = "src/lib.rs"

[[bin]]
name = "sota_client"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "0.4.1"
chan = "0.1.18"
chan-signal = "0.2.0"
chrono = { version = "0.3", features = ["serde"] }
crossbeam = "0.2.10"
dbus = "0.5.1"
env_logger = "0.4.2"
getopts = "0.2.14"
hyper = { version = "0.10.5", default-features = false }
lazy_static = "0.2.2"
log = "0.3.6"
nom = "1.2.4"
openssl = "0.9.10"
pem = "0.2.0"
ring = { version = "0.7.1", features = [ "rsa_signing" ] }
rust-crypto = "0.2.36"
serde_derive = "0.9.11"
serde = "0.9.11"
serde_json = "0.9.9"
time = "0.1.36"
toml = "0.3.1"
tungstenite = { version = "0.1.1", default-features = false }
unix_socket = "0.5.0"
untrusted = "0.3.2"
url = "1.2.1"
uuid = { version = "0.4.0", features = ["serde", "v4"] }
