[package]
name = "sota_client"
version = "0.1.0"
authors = ["Shaun Taheri <shaun@advancedtelematic.com>"]

[lib]
name = "sota"
path = "src/lib.rs"

[[bin]]
name = "sota_client"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "0.4.1"
chan = "0.1.18"
chan-signal = "0.2.0"
chrono = { version = "0.3", features = ["serde"] }
crossbeam = "0.2.10"
dbus = { version = "0.5.1", optional = true }
env_logger = "0.4.2"
getopts = "0.2.14"
hex = "0.2.0"
hyper = { version = "0.10.8", default-features = false }
lazy_static = "0.2.6"
log = "0.3.6"
nom = "1.2.4"
openssl = "0.9.10"
pem = "0.3.0"
ring = { version = "0.7.1", features = [ "rsa_signing" ] }
rust-crypto = "0.2.36"
serde_derive = "0.9.13"
serde = "0.9.13"
serde_json = "0.9.10"
tar = "0.4.11"
time = "0.1.36"
toml = "0.3.1"
tungstenite = { version = "0.2.2", default-features = false, optional = true }
unix_socket = { version = "0.5.0", optional = true }
untrusted = "0.3.2"
url = "1.2.1"
uuid = { version = "0.4.0", features = ["serde", "v4"] }

[features]
default = ["d-bus", "socket", "websocket"]
d-bus = ["dbus"]
socket = ["unix_socket"]
websocket = ["tungstenite"]

[profile.release]
lto = true
opt-level = 3
