[package]
name = "sota_client"
version = "0.1.0"
authors = ["Shaun Taheri <shaun@advancedtelematic.com>"]

[lib]
name = "sota"
path = "src/lib.rs"

[[bin]]
name = "sota_client"
path = "src/main.rs"

[dependencies]
base64 = "0.6.0"
bincode = "0.9.0"
bytes = { version = "0.4.5", features = ["serde"] }
byteorder = "1.1.0"
chan = "0.1.18"
chan-signal = "0.3.1"
chrono = { version = "0.4.0", features = ["serde"] }
crossbeam = "0.3.0"
dbus = { version = "0.5.4", optional = true }
env_logger = "0.4.3"
getopts = "0.2.15"
hex = "0.2.0"
hmac = "0.4.2"
hyper = { version = "0.10.13", default-features = false }
itoa = "0.3.4"
lazy_static = "0.2.9"
libc = "0.2.32"
log = "0.3.8"
maplit = "0.1.5"
net2 = "0.2.31"
openssl = "0.9.19"
pem = "0.4.1"
ring = { version = "0.12.1", features = [ "rsa_signing" ] }
rust-crypto = "0.2.36"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
sha2 = "0.6.0"
tar = "0.4.13"
time = "0.1.38"
toml = "0.4.5"
tungstenite = { version = "0.5.0", default-features = false, optional = true }
unix_socket = { version = "0.5.0", optional = true }
untrusted = "0.5.1"
url = "1.5.1"
uuid = { version = "0.5.1", features = ["serde", "v4"] }

[features]
default = ["socket"]
all = ["rvi", "socket", "websocket"]
docker = ["all"]
rvi = ["dbus"]
socket = ["unix_socket"]
websocket = ["tungstenite"]
