[package]
name = "sota-installer"
version = "0.1.0"
authors = ["Shaun Taheri <shaun@advancedtelematic.com>"]

[dependencies]
clap = "2.25.0"
env_logger = "0.4.3"
log = "0.3.8"
maplit = "0.1.4"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
sota_client = { version = "0.1.0", path = "../sota-client" }
toml = "0.4.5"
uuid = "0.5.1"