[package]
name = "sota-launcher"
version = "0.1.0"
authors = ["Shaun Taheri <shaun@advancedtelematic.com>"]

[dependencies]
clap = "2.25.0"
error-chain = "0.10.0"
env_logger = "0.4.3"
log = "0.3.8"
maplit = "0.1.4"
reqwest = "0.6.2"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
sota_client = { version = "0.1.0", path = "../sota-client" }
toml = "0.4.2"
uuid = "0.5.1"
